--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "phalcon/incubator": "^3.0",
         "phpunit/phpunit": "^5.5",
-        "phalcon/devtools": "^3.0"
+        "phalcon/devtools": "^3.0",
+        "codeception/codeception": "^2.2"
     },
     "autoload": {
         "psr-4": {
