update docker images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ app:
     volumes:
         - .:/usr/share/nginx/html
     command: "true"
+    container_name: house_app
 
 mongo:
     image: mongo:latest
