--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,6 +3,7 @@ server {
     #root /var/www/app/web;
     root /usr/share/nginx/html/web;
     index index.html index.php;
+    server_name localhost;
 
     charset utf-8;
 
