--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
         "psr-4": {
             "tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "chmod 777 app/cache -R"
+        ]
     }
 }
