--- a/docker/php-cli/Dockerfile
+++ b/docker/php-cli/Dockerfile
@@ -12,5 +12,13 @@ RUN php -r "copy('https://getcomposer.org/composer.phar', '/usr/local/bin/compos
 RUN chmod +x /usr/local/bin/composer
 RUN composer global require "fxp/composer-asset-plugin:~1.1.1"
 
+RUN git clone git://github.com/phalcon/cphalcon.git
+RUN cd cphalcon/build && ./install
+RUN docker-php-ext-enable phalcon
+
+#RUN apt-get install -y libssl-dev
+#RUN yes | pecl install mongodb
+#RUN docker-php-ext-enable mongodb
+
 CMD composer install
 
